--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "irungujohnson-mobile-portfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
